--- a/style.scss
+++ b/style.scss
@@ -251,6 +251,10 @@ p > img {
   font-size: 28px;
   letter-spacing: 1px;
   text-align: left;
+
+  @include mobile {
+    text-align: center;
+  }
 }
 
 .site-description {
